# deepfake-detector

./: .dockerignore  .gitignore  .gitmodules  BATCH_PROCESSING_GUIDE.md  CHANGELOG.md  CI_SETUP.md  DELIVERY_CHECKLIST.md  DOCKER_QUICK_START.txt  Dockerfile  FRAME_INFERENCE_SETUP.md  GIT_PREPARATION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_MODEL_SETUP.md  MODEL_SETUP.md  QUICK_REFERENCE_V2.md  QUICK_START.md  README.md  TRANSLATION_COMPLETE.md  TRUFOR_TECHNICAL_GUIDE.md  Testing.docx  Testing.md  UI_FEATURES.md  UPGRADE_SUMMARY_V2.md  User Story.csv  V2_DELIVERY.md  VIDEOMAE_SETUP_COMPLETE.md  WEIGHTS_DOWNLOAD_GUIDE.md  config.yaml  docker-compose.yml  package.json  pytest.ini  requirements.txt  sequence_diagram.puml  start.bat  start.sh  start_offline.py  test_model.py  user_case_diagram.puml  user_stories.csv
.github/workflows/: ci.yml  quick-test.yml
app/: main.py
app/adapters/: deepfakebench_adapter.py  local_resnet_adapter.py  reality_defender.py  trufor_adapter.py
app/auth/: decorators.py  user_manager.py
app/frontend/:  package-lock.json package.json
app/history/: __init__.py  history_manager.py
app/reports/: pdf_generator.py  zip_generator.py
app/utils/: __init__.py
app/web/: deepfakebench.html  history.html  index.html  index_main.html  (+4 more)
configs/: config.yaml  pyproject.toml  requirements.txt
docs/: HANDOVER_DOCUMENT.md  MODEL_SETUP.md
ducuments and diagrams/: Client_meeting_2.pptx  User Case Diagram.puml  User Story.csv  User Story.txt  User_Story_Map.md  domain_model_diagram.md  personas.md  sequence_diagram.md  v2_domain_model_diagram.md  v2_sequence_diagram.md
models/: .gitkeep  MODEL_SETUP.md  README.md  download_models.py  share_models.py
runs/: .gitkeep
scripts/: clean_test_data.ps1  download_videomae_weights.py  download_xception_pretrained.py  run_tests.py  start.bat  start.sh  start_local_model.py  start_trufor.py  test_model.py  test_video_analysis.py  test_video_api.ps1  test_with_huggingface.py
test_data_cycle2/: invalid.txt
tests/: test_adapters.py  test_api_endpoints.py  test_auth.py  test_basic.py  test_history.py  test_integration.py  test_model_loading.py
tools/: README.md  __init__.py  aggregate_runs.py  batch_predict.py  build_dfbench_model.py  fuse_scores.py  list_models.py  predict_frames.py  quick_compare.py  weight_registry.py
(+39 files in other folders)
